# rust_book

./: .gitignore  Cargo.toml
src/: main.rs
src/密码学/: 使用 HMAC 摘要对消息进行签名和验证.rs  加密.rs  计算文件的 SHA-256 摘要.rs
src/并发and并行/: .md  Map-reduce 并行计算.rs  保持全局可变状态.rs  创建并发的数据管道.rs  在两个线程间传递数据.rs  对 vector 并行排序.rs  将绘制分形的线程分派到线程池.rs  并行改变数组中元素.rs  并行测试集合元素匹配.rs  并行生成 jpg 缩略图.rs  生成短期线程.rs  给定断言并行搜索项.rs
src/开发工具/: 日志配置.rs
