[package]
name = "rust_book"
version = "0.1.0"
edition = "2021"
default-run = "rust_book"
[dependencies]
ansi_term = "0.12.1"
rand = "0.8.5"
rand_distr = "0.4.3"
flate2 = "1.0.30"
tar = "0.4.41"
tokio = { version = "1.39.2",features = ["full"] }
crossbeam = "0.8.4"
crossbeam-channel = "0.5.13"
lazy_static = "1.5.0"
